src/grammar.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.6 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<{}> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Start: peg$parseStart };
  let peg$startRuleFunction: () => any = peg$parseStart;

  const peg$c0 = function(lines: any): any { return { type : 'Block', lines: lines || [] } };
  const peg$c1 = function(h: any, v: any): any { return v};
  const peg$c2 = function(h: any, t: any): any { return [h, ...t]};
  const peg$c3 = "break";
  const peg$c4 = peg$literalExpectation("break", false);
  const peg$c5 = function(): any { return { type : 'Break' }};
  const peg$c6 = "var";
  const peg$c7 = peg$literalExpectation("var", false);
  const peg$c8 = "=";
  const peg$c9 = peg$literalExpectation("=", false);
  const peg$c10 = function(name: any, value: any): any {
  	return {
  		type : 'Variable',
  		name,
  		value
  	}
  };
  const peg$c11 = "{";
  const peg$c12 = peg$literalExpectation("{", false);
  const peg$c13 = "}";
  const peg$c14 = peg$literalExpectation("}", false);
  const peg$c15 = function(ok: any): any { return ok };
  const peg$c16 = "function";
  const peg$c17 = peg$literalExpectation("function", false);
  const peg$c18 = "(";
  const peg$c19 = peg$literalExpectation("(", false);
  const peg$c20 = ")";
  const peg$c21 = peg$literalExpectation(")", false);
  const peg$c22 = function(name: any, args: any, block: any): any {
  	return {
  		type : 'Function',
  		name,
  		args,
  		block
  	}
  };
  const peg$c23 = "return";
  const peg$c24 = peg$literalExpectation("return", false);
  const peg$c25 = function(e: any): any { return { type : 'Return', value: e}};
  const peg$c26 = "if";
  const peg$c27 = peg$literalExpectation("if", false);
  const peg$c28 = "else";
  const peg$c29 = peg$literalExpectation("else", false);
  const peg$c30 = function(test: any, ok: any, v: any): any { return v};
  const peg$c31 = function(test: any, ok: any, e: any): any {
  	return {
  		type : 'If',
  		test,
  		ok,
  		fail: e
  	}	
  };
  const peg$c32 = "for";
  const peg$c33 = peg$literalExpectation("for", false);
  const peg$c34 = "in";
  const peg$c35 = peg$literalExpectation("in", false);
  const peg$c36 = function(iterator: any, list: any, block: any): any {
  	return { 
  		type : 'For',
  		iterator,
  		list,
  		block
  	}
  };
  const peg$c37 = "each";
  const peg$c38 = peg$literalExpectation("each", false);
  const peg$c39 = function(self: any, block: any): any {
  	return { 
  		type : 'Each',
  		self,
  		block
  	}
  };
  const peg$c40 = function(call: any, value: any): any { 
  		call.args.push(value);
  		call.type = 'Set';		
  		return call;
  	};
  const peg$c41 = "or";
  const peg$c42 = peg$literalExpectation("or", false);
  const peg$c43 = function(h: any, operator: any, value: any): any { return {operator, value }};
  const peg$c44 = function(h: any, t: any): any { 
  	return t.length ? 
  			{ type : 'Or', init: h, list : t} :
  			h;
  };
  const peg$c45 = "and";
  const peg$c46 = peg$literalExpectation("and", false);
  const peg$c47 = function(h: any, t: any): any {
  	if (t.length){
  		return { type : 'And', init: h, list : t}
  	} else {
  		return h;
  	}
  };
  const peg$c48 = function(a: any, c: any, b: any): any { return { b, c } };
  const peg$c49 = function(a: any, r: any): any {
  	if (r){
  		return { type : 'Compare', a, b : r.b, operator : r.c }
  	} else {
  		return a;
  	}
  };
  const peg$c50 = function(h: any, t: any): any {
  	if (t.length){
  		return {
  			type : 'Math', init : h, list : t 
  		}
  	} else {
  		return h;
  	}
  };
  const peg$c51 = function(h: any, operator: any, value: any): any { return { operator, value } };
  const peg$c52 = "when";
  const peg$c53 = peg$literalExpectation("when", false);
  const peg$c54 = "then";
  const peg$c55 = peg$literalExpectation("then", false);
  const peg$c56 = function(test: any, ok: any, v: any): any { return v };
  const peg$c57 = function(test: any, ok: any, fail: any): any { 
  	return {
  		type : 'When',
  		test,
  		ok,
  		fail
  	}
  };
  const peg$c58 = "!";
  const peg$c59 = peg$literalExpectation("!", false);
  const peg$c60 = function(t: any): any { return { type : 'Negation', value : t}};
  const peg$c61 = function(t: any, call: any): any {
  		if (call.length){
  			return [t, ...call].reduce((p, c) => {
  				c.args = [p, ...c.args];
  				return c;
  			});
  		} else {
  			return t
  		}
  	};
  const peg$c62 = "is empty";
  const peg$c63 = peg$literalExpectation("is empty", false);
  const peg$c64 = function(): any { 
  		return {
  			type : 'Call', 
  			args : [{ type : 'String', value : '_isEmpty' }]
  		} 
  	};
  const peg$c65 = "is not empty";
  const peg$c66 = peg$literalExpectation("is not empty", false);
  const peg$c67 = function(): any { 
  		return {
  			type : 'Call', 
  			args : [{ type : 'String', value : '_isNotEmpty' }]
  		} 
  	};
  const peg$c68 = ".";
  const peg$c69 = peg$literalExpectation(".", false);
  const peg$c70 = function(message: any, args: any): any { 
  		return {
  			type : 'Call', 
  			args : [{ type : 'String', value : message}, ...args]
  		} 
  	};
  const peg$c71 = function(message: any): any { 
  		return {
  			type : 'Get', 
  			args : [{ type : 'String', value : message}]
  		} 
  	};
  const peg$c72 = "[";
  const peg$c73 = peg$literalExpectation("[", false);
  const peg$c74 = "]";
  const peg$c75 = peg$literalExpectation("]", false);
  const peg$c76 = function(index: any): any { 
  		return {
  			type : 'Get', 
  			args : [index]			
  		} 
  	};
  const peg$c77 = ",";
  const peg$c78 = peg$literalExpectation(",", false);
  const peg$c79 = function(h: any, v: any): any { return v };
  const peg$c80 = function(h: any, t: any): any {
  	return many([h,t])
  };
  const peg$c81 = function(v: any): any { return v };
  const peg$c82 = "=>";
  const peg$c83 = peg$literalExpectation("=>", false);
  const peg$c84 = function(id: any, exp: any): any { return { 
  	type : 'Arrow',
  	id,
  	expression: exp
  }};
  const peg$c85 = function(name: any, args: any): any {
  	return {
  		type : 'Call',		
  		args : [{ type : 'Scope'}, { type : 'String', value: name}, ...args ]
  	}
  };
  const peg$c86 = function(value: any): any { return { type : 'Nest', value } };
  const peg$c87 = function(members: any): any { return { type: 'Object', members }};
  const peg$c88 = ":";
  const peg$c89 = peg$literalExpectation(":", false);
  const peg$c90 = function(name: any, value: any): any {
  	return {
  		name, value
  	}
  };
  const peg$c91 = function(value: any): any { return { type : 'Get', args : [{ type : 'Scope' }, value] }};
  const peg$c92 = function(v: any): any { return  {type : 'String', value : v} };
  const peg$c93 = "`";
  const peg$c94 = peg$literalExpectation("`", false);
  const peg$c95 = function(v: any): any { return { type : 'Translate', title : v } };
  const peg$c96 = "is";
  const peg$c97 = peg$literalExpectation("is", false);
  const peg$c98 = "with";
  const peg$c99 = peg$literalExpectation("with", false);
  const peg$c100 = "empty";
  const peg$c101 = peg$literalExpectation("empty", false);
  const peg$c102 = "class";
  const peg$c103 = peg$literalExpectation("class", false);
  const peg$c104 = "to";
  const peg$c105 = peg$literalExpectation("to", false);
  const peg$c106 = "==";
  const peg$c107 = peg$literalExpectation("==", false);
  const peg$c108 = "!=";
  const peg$c109 = peg$literalExpectation("!=", false);
  const peg$c110 = ">=";
  const peg$c111 = peg$literalExpectation(">=", false);
  const peg$c112 = "<=";
  const peg$c113 = peg$literalExpectation("<=", false);
  const peg$c114 = ">";
  const peg$c115 = peg$literalExpectation(">", false);
  const peg$c116 = "<";
  const peg$c117 = peg$literalExpectation("<", false);
  const peg$c118 = "+";
  const peg$c119 = peg$literalExpectation("+", false);
  const peg$c120 = "-";
  const peg$c121 = peg$literalExpectation("-", false);
  const peg$c122 = "*";
  const peg$c123 = peg$literalExpectation("*", false);
  const peg$c124 = "/";
  const peg$c125 = peg$literalExpectation("/", false);
  const peg$c126 = /^[a-zA-Z ]/;
  const peg$c127 = peg$classExpectation([["a", "z"], ["A", "Z"], " "], false, false);
  const peg$c128 = function(t: any): any { return t.join('') };
  const peg$c129 = /^[a-zA-Z]/;
  const peg$c130 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  const peg$c131 = /^[a-zA-Z0-9_]/;
  const peg$c132 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  const peg$c133 = function(c: any, t: any): any { return c + t.join('') };
  const peg$c134 = function(from: any, to: any): any {
  		return {
  			type : 'Generator',
  			from,
  			to
  		}
  	};
  const peg$c135 = function(h: any, t: any): any {
  	return { 
  		type : 'Array',
  		list: many([h,t])
  	}
  };
  const peg$c136 = peg$otherExpectation("date");
  const peg$c137 = /^[0-9]/;
  const peg$c138 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c139 = "T";
  const peg$c140 = peg$literalExpectation("T", false);
  const peg$c141 = /^[0-9:.]/;
  const peg$c142 = peg$classExpectation([["0", "9"], ":", "."], false, false);
  const peg$c143 = "Z";
  const peg$c144 = peg$literalExpectation("Z", false);
  const peg$c145 = function(t: any): any { return { value : many(t).join(''), type : 'DateTime'} };
  const peg$c146 = function(t: any): any { return { value : many(t).join(''), type : 'Date' } };
  const peg$c147 = function(value: any): any { return { type : 'String', value }};
  const peg$c148 = "true";
  const peg$c149 = peg$literalExpectation("true", false);
  const peg$c150 = function(): any { return { type : 'True' }};
  const peg$c151 = "false";
  const peg$c152 = peg$literalExpectation("false", false);
  const peg$c153 = function(): any { return { type : 'False' }};
  const peg$c154 = "\"";
  const peg$c155 = peg$literalExpectation("\"", false);
  const peg$c156 = /^[^"]/;
  const peg$c157 = peg$classExpectation(["\""], true, false);
  const peg$c158 = function(t: any): any { return t.join('') ; };
  const peg$c159 = "'";
  const peg$c160 = peg$literalExpectation("'", false);
  const peg$c161 = /^[^']/;
  const peg$c162 = peg$classExpectation(["'"], true, false);
  const peg$c163 = function(m: any, t: any): any { 
      	let abs = tryInt(many(t).join(''));
          if (m)
          	abs = -abs;
  		return {
  			type : 'Number',
              value : abs 
          }
      };
  const peg$c164 = peg$otherExpectation("space");
  const peg$c165 = /^[ \t\r\n]/;
  const peg$c166 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);
  const peg$c167 = /^[ ;\t\r\n]/;
  const peg$c168 = peg$classExpectation([" ", ";", "\t", "\r", "\n"], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseStart(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLines();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEOL();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLines(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseLine();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseEOL();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseLine();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseEOL();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLine();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLine(): any {
    let s0, s1;

    s0 = peg$parseFunc();
    if (s0 === peg$FAILED) {
      s0 = peg$parseVariable();
      if (s0 === peg$FAILED) {
        s0 = peg$parseFor();
        if (s0 === peg$FAILED) {
          s0 = peg$parseIf();
          if (s0 === peg$FAILED) {
            s0 = peg$parseEach();
            if (s0 === peg$FAILED) {
              s0 = peg$parseAssignment();
              if (s0 === peg$FAILED) {
                s0 = peg$parseOr();
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  if (input.substr(peg$currPos, 5) === peg$c3) {
                    s1 = peg$c3;
                    peg$currPos += 5;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c4); }
                  }
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c5();
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseReturn();
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseVariable(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTOKEN();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s5 = peg$c8;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseOr();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c10(s3, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlock(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c11;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseStart();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 125) {
          s3 = peg$c13;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c15(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseLine();
    }

    return s0;
  }

  function peg$parseFunc(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
